# python-deequ

./: .gitignore  .shadow.yml  BENCHMARK.md  CONTRIBUTING.md  Dockerfile  Engines.md  README.md  analyzers.ipynb  benchmark_cli.py  pyproject.toml  repository.ipynb  requirements.txt  setup.cfg  setup.py  verification.ipynb
.github/: stale.yml
.github/workflows/: auto-approve.yml  base.yml  build_test.yml  code_quality_lint_checkers.yml  greetings.yml  issue-bot.yml  on_review_requested.yml  publish.yml  publish_pypi.yml  update-kb.yml
benchmark/: __init__.py  config.py  experiments.py  report.py  results.py  spark_server.py  visualize.py  worker.py
docs/: analyzers.md  anomaly_detection.md  architecture.md  checks.md  profiles.md  repository.md  suggestions.md  verification.md
docs/source/: api.rst  conf.py  index.rst  pydeequ.rst  requirements.txt
pydeequ/: __init__.py  analyzers.py  anomaly_detection.py  check_functions.py  checks.py  configs.py  metrics.py  pandas_utils.py  profiles.py  repository.py  scala_utils.py  suggestions.py  verification.py
pydeequ/engines/: __init__.py  duckdb.py  duckdb_config.py  spark.py
pydeequ/engines/constraints/: __init__.py  base.py  batch_evaluator.py  evaluators.py  factory.py  protocols.py
pydeequ/engines/operators/: __init__.py  base.py  factory.py  grouping_batcher.py  grouping_operators.py  metadata_operators.py  mixins.py  profiling_operators.py  protocols.py  scan_operators.py
pydeequ/engines/suggestions/: __init__.py  registry.py  rules.py  runner.py
pydeequ/v2/: __init__.py  analyzers.py  checks.py  predicates.py  profiles.py  spark_helpers.py  suggestions.py  verification.py
pydeequ/v2/proto/: __init__.py  analysis_pb2.py  analysis_pb2.pyi  column_profiler_pb2.py  column_profiler_pb2.pyi  common_pb2.py  common_pb2.pyi  constraint_suggestion_pb2.py  constraint_suggestion_pb2.pyi  deequ_connect.proto  deequ_connect_pb2.py  deequ_connect_pb2.pyi  verification_pb2.py  verification_pb2.pyi
scripts/: generate_kb.py  regen_proto.py
scripts/issue_bot/: config.py  github_client.py  main.py  slack_client.py
tests/: conftest.py  pytest.ini  test_analyzers.py  test_anomaly_detection.py  test_bot.py  test_checks.py  test_config.py  test_pandas_utils.py  test_profiles.py  test_pydeequ.py  test_repository.py  test_scala_utils.py  test_suggestions.py  test_verification.py  test_version.py
tests/engines/: __init__.py  conftest.py  test_constraint_evaluators.py  test_duckdb_analyzers.py  test_duckdb_constraints.py  test_duckdb_profiles.py  test_duckdb_suggestions.py  test_operators.py  test_suggestion_rules.py
tests/engines/comparison/: __init__.py  conftest.py  test_analyzer_parity.py  test_constraint_parity.py  test_profile_parity.py  test_suggestion_parity.py  utils.py
tests/engines/fixtures/: __init__.py  datasets.py
tests/helpers/: __init__.py  spark_server.py
tests/v2/: __init__.py  conftest.py  test_analyzers.py  test_checks.py  test_e2e_spark_connect.py  test_profiles.py  test_suggestions.py  test_unit.py
tutorials/: KLLCheckExample.ipynb  KLLExample.ipynb  analyzers.ipynb  anomaly_detection.ipynb  basic_example.ipynb  blogpost.ipynb  constraint_suggestion_example.ipynb  data_profiling_example.ipynb  data_quality_example_duckdb.py  data_quality_example_v2.py  hasPattern_check.ipynb  profiles.ipynb  repository.ipynb  repository_file_dbfs.ipynb  repository_sync_dbfs.ipynb  suggestions.ipynb  test_data_quality_at_scale.ipynb  verification.ipynb
tutorials/glue_tutorials/: advanced_anomaly_detection_tutorial.ipynb  basic_anomalies_script_demo.ipynb  data_cleaning_tutorial.ipynb  integrate_pydeequ_glue.md  simple_metrics_repository_tutorial.ipynb
tutorials/synthetic_data/: 01-synthetic-data-electronics.ipynb  02-synthetic-data-jewelry.ipynb  03-synthetic-data-other-products.ipynb  review_generation_helpers.py
