[project]
name = "pydeequ"
version = "2.0.0b1"
description = "PyDeequ - Unit Tests for Data"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9,<4"
authors = [
    {name = "Chenyang Liu", email = "peterl@amazon.com"},
    {name = "Rahul Sharma", email = "rdsharma@amazon.com"},
]
maintainers = [
    {name = "Chenyang Liu", email = "peterl@amazon.com"},
    {name = "Rahul Sharma", email = "rdsharma@amazon.com"},
]
keywords = [
    "deequ",
    "pydeequ",
    "data-engineering",
    "data-quality",
    "data-profiling",
    "dataquality",
    "dataunittest",
    "data-unit-tests",
    "data-profilers"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Core dependencies - minimal set required for the base package
dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "protobuf>=4.21.0",
    "setuptools>=69.0.0",  # Required for Python 3.12+ (distutils removed)
]

[project.optional-dependencies]
# DuckDB backend - lightweight, no JVM required
duckdb = ["duckdb>=0.9.0"]

# Spark backend - requires Spark Connect server
spark = ["pyspark[connect]>=3.5.0"]

# All backends
all = [
    "duckdb>=0.9.0",
    "pyspark[connect]>=3.5.0",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "pytest-rerunfailures>=14.0",
    "matplotlib>=3.8.0",
    "duckdb>=0.9.0",
    "pyspark[connect]>=3.5.0",
]

[project.urls]
Homepage = "https://pydeequ.readthedocs.io"
Repository = "https://github.com/awslabs/python-deequ"
Documentation = "https://pydeequ.readthedocs.io"
Issues = "https://github.com/awslabs/python-deequ/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Poetry-specific settings (for poetry install compatibility)
packages = [{include = "pydeequ"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"
black = "^24.0.0"
pre-commit = "^3.6.0"
pytest-rerunfailures = "^14.0"
matplotlib = "^3.8.0"
duckdb = ">=0.9.0"
pyspark = {version = ">=3.5.0", extras = ["connect"]}

[tool.black]
# https://github.com/psf/black
line-length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | htmlcov
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
line_length = 110
indent = '    '
multi_line_output = 3
include_trailing_comma = true
skip_glob = ['__init__.py']
atomic = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".*", "*.egg*", "old", "docs", "dist", "build"]
cache_dir = "./.pytest_cache"
python_files = "*test_*.py"
